resources/aws-cloud-formation-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Creates an ec2 instance that hosts a web application to access an Email database.
Parameters:
  keyPairName:
    Description: Select a key pair to ssh into this instance.
    Type: AWS::EC2::KeyPair::KeyName

     
Resources:
  EMailDBApplicationServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0bdd88bd06d16ba03
      InstanceType: t3.micro
      KeyName: !Ref keyPairName
      SecurityGroups: 
        - !Ref SecGroupSshHttp
      Tags: 
        - Key: Name
          Value: ec2EmailDatabase
      UserData: 
        Fn::Base64: |
          #!/bin/bash
          exec >> /tmp/user-data.log 2>&1
          echo "Starting web service setup for Flask app..."
          mkdir -p /var/www/html
          yum update -y
          yum install git -y
          cd /var/www/html
          git clone https://github.com/I-Barth/aws_demo_rds_via_flask.git 
          yum install -y python3 python3-pip
          pip3 install Flask==2.3.3
          pip3 install flask_mysql
          nohup python3 /var/www/html/app-with-mysql.py --host 0.0.0.0 --port 8080 &
          echo "Web service setup complete. Application running on port 8080." 


  SecGroupSshHttp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allows inbound ssh and http connections from port 8080
      GroupName: myEmaildatabaseEc2SecGroup
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: http rule
          FromPort: 80
          IpProtocol: tcp          
          ToPort: 80          
        - CidrIp: 0.0.0.0/0
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080          
      Tags: 
        - Key: Name
          Value: myEmaildatabaseEc2SecGroup

Outputs:
  WebsiteURL:
    Description: The URL for the EMail Database Webapp
    Value: !Sub 'http://${EMailDBApplicationServer.PublicDnsName}'
